--- a/src/exercise/01.html
+++ b/src/exercise/01.html
@@ -1,19 +1,31 @@
-<!-- Basic JavaScript-rendered Hello World -->
-<!-- http://localhost:3000/isolated/exercise/01.html -->
+<body>
+  <!-- Basic JavaScript-rendered Hello World -->
+  <!-- http://localhost:3000/isolated/exercise/01.html -->
 
-<!-- 🐨 Create (in HTML) a <body> with a <div> with the id of "root" -->
-<!-- 🐨 Then create a <script type="module"> for your JavaScript -->
-<!--   📜 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script#attributes -->
-<!--   📜 https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules -->
-<!--   📜 https://github.com/mdn/js-examples/tree/master/modules -->
+  <!-- 🐨 Create (in HTML) a <body> with a <div> with the id of "root" -->
+  <!-- 🐨 Then create a <script type="module"> for your JavaScript -->
+  <!--   📜 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/script#attributes -->
+  <!--   📜 https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Modules -->
+  <!--   📜 https://github.com/mdn/js-examples/tree/master/modules -->
 
-<!-- These next instructions are to be written in JavaScript in the <script> tag -->
-<!-- 🐨 Create a div -->
-<!--   💰 document.createElement('div') -->
+  <!-- These next instructions are to be written in JavaScript in the <script> tag -->
+  <!-- 🐨 Create a div -->
+  <!--   💰 document.createElement('div') -->
 
-<!-- 🐨 Set the div's textContent to 'Hello World' and className to 'container' -->
-<!--   💰 div.textContent = '...' -->
+  <!-- 🐨 Set the div's textContent to 'Hello World' and className to 'container' -->
+  <!--   💰 div.textContent = '...' -->
 
-<!-- 🐨 Append the div to the root div using `append` -->
-<!--   💰 document.getElementById('root') -->
-<!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+  <!-- 🐨 Append the div to the root div using `append` -->
+  <!--   💰 document.getElementById('root') -->
+  <!--   📜 https://developer.mozilla.org/en-US/docs/Web/API/ParentNode/append -->
+
+  <script type="module">
+    var rootdiv = document.createElement('div')
+    rootdiv.setAttribute('id', 'root')
+    document.body.append(rootdiv)
+    var mydiv = document.createElement('div')
+    mydiv.textContent = 'Hello World!'
+    mydiv.className = 'container'
+    rootdiv.append(mydiv)
+  </script>
+</body>
