--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -8,16 +8,21 @@
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
-
+    function message(props) {
+      return <div className="message">{props.children}</div>
+    }
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
+    const byeElement = message({children: 'Goodbye World'})
+
+    const helloElement = React.createElement(message, {children: 'hello world'})
+    console.log(helloElement)
     const element = (
       <div className="container">
-        <div className="message">Hello World</div>
-        <div className="message">Goodbye World</div>
+        {helloElement}
+        {byeElement}
       </div>
     )
-
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
     ReactDOM.createRoot(document.getElementById('root')).render(element)
   </script>
