--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -7,20 +7,37 @@
   <script src="https://unpkg.com/react-dom@18.1.0/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.12.4/babel.js"></script>
   <script type="text/babel">
-    // 🐨 Make a function called `message` which returns the JSX we want to share
-    function message(props) {
-      return <div className="message">{props.children}</div>
+    // 🐨 Make a function called `Message` which returns the JSX we want to share
+    function Message({greeting, subject}) {
+      return (
+        <div className="Message">
+          {greeting}, {subject}
+        </div>
+      )
+    }
+    const PropTypes = {
+      String(props, propName, componentName) {
+        if (typeof props[propName] !== 'String') {
+          return new Error(
+            'Please provide a string instead of',
+            typeof props[propName],
+          )
+        }
+      },
+    }
+
+    Message.propTypes = {
+      greeting: PropTypes.String,
+      subject: PropTypes.String,
     }
     // 🐨 use that function in place of the divs below with:
-    // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
-    const byeElement = message({children: 'Goodbye World'})
-
-    const helloElement = React.createElement(message, {children: 'hello world'})
-    console.log(helloElement)
+    // 💰 {Message({children: 'Hello World'})} {Message({children: 'Goodbye World'})}
+    // const byeElement = Message({children: 'Goodbye World'})
+    // const helloElement = React.createElement(Message, {children: 'hello world'})
     const element = (
       <div className="container">
-        {helloElement}
-        {byeElement}
+        <Message greeting="Hello" subject="World" />
+        <Message greeting="GoodBye" subject="World" />
       </div>
     )
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
